--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Metadata
-title: "xredlavax's Purchase List"
+title: "TestingTheEL33T's Purchase List"
 favicon: assets/img/favicon.png
 description: A custom version of Toolkit's item list to support all the latest features of Utils.
 
-baseurl: '/XREDLAVAX_TTV' # the subpath of your site, e.g. /blog
+baseurl: '/TTK' # the subpath of your site, e.g. /blog
 url: 'https://testingtheel33t.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ''
 github_username: 'TestingTheEL33T'
