--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: "Team Logic Laan's Purchase List"
 favicon: assets/img/favicon.png
 description: A custom version of Toolkit's item list to support all the latest features of Utils.
 
-baseurl: '/TTK' # the subpath of your site, e.g. /blog
-url: '' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: 'Laan-s-Purchase-List' # the subpath of your site, e.g. /blog
+url: 'https://timlogic87.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 'TeamLogicNL'
 github_username: 'TimLogic87'
 
